--- a/.env.production.example
+++ b/.env.production.example
@@ -2,7 +2,13 @@
 # Copy these to Vercel Dashboard > Project Settings > Environment Variables
 
 # Database (PostgreSQL - Supabase)
-DATABASE_URL="postgres://postgres.PROJECT_REF:PASSWORD@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
+# Connection Pooler (for serverless/edge functions - use this for most queries)
+# Add connection pooling parameters for better stability
+DATABASE_URL="postgresql://postgres.PROJECT_REF:PASSWORD@aws-0-us-east-1.pooler.supabase.com:5432/postgres?pgbouncer=true&connection_limit=1&pool_timeout=10"
+
+# Direct Connection (for migrations and long-running operations)
+# Use port 6543 for direct connection (bypasses pgBouncer)
+DIRECT_DATABASE_URL="postgresql://postgres.PROJECT_REF:PASSWORD@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
 
 # NextAuth
 NEXTAUTH_URL="https://your-domain.vercel.app"
